@@ -1,0 +1,16 @@
+/* -*- C++ -*- */
+
+/* Time-stamp: <2010-11-29 13:33:25 Monday by sarlmolapple> */
+
+/**
+ * @file
+ * @author Sarlmol Apple
+ * @brief Supports Listen Music Player
+ */
+
+#ifndef _OL_PLAYER_LISTEN_H
+#define _OL_PLAYER_LISTEN_H
+
+struct OlPlayer* ol_player_listen_get ();
+
+#endif /* OL_PLAYER_LISTEN_H */
